--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-blockchain-evote></app-blockchain-evote>
+<div style="background-color: #edfaf8;">
+    <app-blockchain-evote></app-blockchain-evote>
+</div>
