--- a/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.html
+++ b/src/app/blockchain-evote/admin/homepage-admin/homepage-admin.component.html
@@ -1,51 +1,77 @@
 <app-menu-bar-admin></app-menu-bar-admin>
-<p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [numVisible]="5" [circular]="true" [showItemNavigators]="true" [showThumbnails]="false">
-    <ng-template pTemplate="item" let-item>
-        <img [src]="item.previewImageSrc" style="width: 70%; display: block;" />
-    </ng-template>
-    <ng-template pTemplate="thumbnail" let-item>
-        <div class="grid grid-nogutter justify-content-center">
-            <img [src]="item.thumbnailImageSrc" style="display: block;" />
-        </div>
-    </ng-template>
-</p-galleria>
+<div class="card" style="background-color: white;">
+    <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [numVisible]="5" [circular]="true"
+        [showItemNavigators]="true" [showThumbnails]="false" [autoPlay]="true">
+        <ng-template pTemplate="item" let-item>
+            <img [src]="item.previewImageSrc" style="width: 80%;height: 100%; display: block;" />
+        </ng-template>
+        <ng-template pTemplate="thumbnail" let-item>
+            <div class="grid grid-nogutter justify-content-center">
+                <img [src]="item.thumbnailImageSrc" style="display: block;" />
+            </div>
+        </ng-template>
+        <ng-template pTemplate="caption" let-item>
+            <div class="flex justify-content-between">
+                <div>
+                    <h4 style="margin-bottom: .5rem; color: #ffffff;">{{ item.title }}</h4>
+                    <p>{{ item.alt }}</p>
+                </div>
+                <button pButton type="button" class="p-button buttonColor" label="อัพเดทข่าวสาร"
+                    style="width: 10%;"></button>
+            </div>
+        </ng-template>
+    </p-galleria>
+</div>
 <div class="card">
     <div class="card-container overflow-hidden">
         <div class="flex">
             <div class="flex-1 flex align-items-center justify-content-center m-2 px-5 py-3 border-round">
-                <div class="flex flex-wrap align-items-center justify-content-center font-bold  text-white m-2 border-round" style="min-width: 60%; min-height: 200px">
-                    <div class="flex-row align-items-center justify-content-center blockBg m-3 border-round" style="min-width: 25%; min-height: 200px">
+                <div class="flex flex-wrap align-items-center justify-content-center font-bold  text-white m-2 border-round"
+                    style="min-width: 60%; min-height: 200px">
+                    <div class="flex-row align-items-center justify-content-center blockBg m-3 border-round"
+                        style="min-width: 25%; min-height: 200px">
                         <label for="buttonCreate">
-                            <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 150px;cursor: pointer;">
+                            <div class="flex align-items-center justify-content-center"
+                                style="min-width: 100%; min-height: 150px;cursor: pointer;">
                                 <img src="assets\img\icon\createvote.png" height="70" width="70" class="mr-2">
                             </div>
-                            <div class="flex align-items-center justify-content-center" style="min-width:100%;cursor: pointer;">
+                            <div class="flex align-items-center justify-content-center"
+                                style="min-width:100%;cursor: pointer;">
                                 จัดการการเลือกตั้ง
-                        </div>
+                            </div>
                         </label>
-                        <button type="button" id="buttonCreate" style="display: none;visibility: hidden;" (click)="goToCreateElection()"></button>
+                        <button type="button" id="buttonCreate" style="display: none;visibility: hidden;"
+                            (click)="goToCreateElection()"></button>
                     </div>
-                    <div class="flex-row align-items-center justify-content-center blockBg m-3 border-round" style="min-width: 25%; min-height: 200px">
+                    <div class="flex-row align-items-center justify-content-center blockBg m-3 border-round"
+                        style="min-width: 25%; min-height: 200px">
                         <label for="buttonManage">
-                            <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 150px;cursor: pointer;">
+                            <div class="flex align-items-center justify-content-center"
+                                style="min-width: 100%; min-height: 150px;cursor: pointer;">
                                 <img src="assets\img\icon\manage.png" height="70" width="55" class="mr-2">
                             </div>
-                            <div class="flex align-items-center justify-content-center" style="min-width:100%;cursor: pointer;">
+                            <div class="flex align-items-center justify-content-center"
+                                style="min-width:100%;cursor: pointer;">
                                 จัดการผู้มีสิทธิ์เลือกตั้ง
-                        </div>
+                            </div>
                         </label>
-                        <button type="button" id="buttonManage" style="display: none;visibility: hidden;" (click)="goToManageVoter()"></button>
+                        <button type="button" id="buttonManage" style="display: none;visibility: hidden;"
+                            (click)="goToManageVoter()"></button>
                     </div>
-                    <div class="flex-row align-items-center justify-content-center blockBg m-3 border-round" style="min-width: 25%; min-height: 200px">
+                    <div class="flex-row align-items-center justify-content-center blockBg m-3 border-round"
+                        style="min-width: 25%; min-height: 200px">
                         <label for="buttonList">
-                            <div class="flex align-items-center justify-content-center" style="min-width: 100%; min-height: 150px;cursor: pointer;">
+                            <div class="flex align-items-center justify-content-center"
+                                style="min-width: 100%; min-height: 150px;cursor: pointer;">
                                 <img src="assets\img\icon\list.png" height="70" width="55" class="mr-2">
                             </div>
-                            <div class="flex align-items-center justify-content-center" style="min-width:100%;cursor: pointer;">
+                            <div class="flex align-items-center justify-content-center"
+                                style="min-width:100%;cursor: pointer;">
                                 รายชื่อผู้ลงสมัคร
-                        </div>
+                            </div>
                         </label>
-                        <button type="button" id="buttonList" style="display: none;visibility: hidden;" (click)="goToCandidatelist()"></button>
+                        <button type="button" id="buttonList" style="display: none;visibility: hidden;"
+                            (click)="goToCandidatelist()"></button>
                     </div>
                 </div>
             </div>
@@ -65,11 +91,14 @@
 </div>
 <div class="card">
     <div class="flex flex-wrap card-container align-items-center m-2" style="max-width: 100%">
-        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of electionOnVoteList;let indexOfelement=index;">
+        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round"
+            style="min-width: 200px; min-height: 100px"
+            *ngFor="let elec of electionOnVoteList;let indexOfelement=index;">
             <p-card header="{{elec.elecName}}" [style]="{width: '360px'}" styleClass="p-card-shadow">
                 <ng-template pTemplate="header">
                     <div class="flex justify-content-center">
-                        <img alt="Card" src="api/candidate/image/{{elec.elecImages}}" [style]="{width: '350px',height: '200px'}" >
+                        <img alt="Card" src="api/candidate/image/{{elec.elecImages}}"
+                            [style]="{width: '350px',height: '200px'}">
                     </div>
                 </ng-template>
                 <p>
@@ -90,7 +119,8 @@
                 </div>
 
                 <ng-template pTemplate="footer">
-                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" (click)="goToElectionDetail(elec.elecId)" [style]="{width: '100%'}"></button>
+                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ"
+                        (click)="goToElectionDetail(elec.elecId)" [style]="{width: '100%'}"></button>
                 </ng-template>
             </p-card>
         </div>
