--- a/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
@@ -13,20 +13,27 @@
                     <p-tabView styleClass="tabview-custom">
                         <p-tabPanel>
                             <ng-template pTemplate="header">
-                                <img src="assets\img\icon\voting-box.png" height="20" width="20" style="margin-right:10px;">
+                                <img src="assets\img\icon\voting-box.png" height="20" width="20"
+                                    style="margin-right:10px;">
                                 <span>รายการที่เปิดให้ลงคะแนน</span>
                             </ng-template>
                             <div class="flex m-2">
                                 <div class="card" style="min-width: 900px;">
-                                    <p-table #inputEL [value]="electionOnVoteList" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['elecId','elecName','elecStartdate','elecEnddate']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+                                    <p-table #inputEL [value]="electionOnVoteList" responsiveLayout="scroll"
+                                        selectionMode="single"
+                                        [globalFilterFields]="['elecId','elecName','elecStartdate','elecEnddate']"
+                                        dataKey="projectCode" [paginator]="true" [rows]="5"
+                                        [showCurrentPageReport]="true"
                                         currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
                                         <ng-template pTemplate="caption">
                                             <div class="flex align-items-center justify-content-between">
                                                 รายการที่เปิดให้ลงคะแนน
                                                 <span class="p-input-icon-left">
-                                            <i class="pi pi-search"></i>
-                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL, $event)"/>
-                                        </span>
+                                                    <i class="pi pi-search"></i>
+                                                    <input type="text" pInputText
+                                                        placeholder="กรุณากรอกรหัสหรือชื่อรายการ"
+                                                        (input)="inputSearch(inputEL, $event)" />
+                                                </span>
                                             </div>
                                         </ng-template>
                                         <ng-template pTemplate="header">
@@ -59,13 +66,16 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" style="width: 100%;" (click)="goToElectionDetail(electionDetail.elecId)"></button>
+                                                    <button pButton type="button" class="p-button buttonColor"
+                                                        label="ตรวจสอบ" style="width: 100%;"
+                                                        (click)="goToElectionDetail(electionDetail.elecId)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="summary">
                                             <div class="flex align-items-center justify-content-between">
-                                                จำนวนรายการทั้งหมด {{electionOnVoteList ? electionOnVoteList.length : 0 }} รายการ
+                                                จำนวนรายการทั้งหมด {{electionOnVoteList ? electionOnVoteList.length : 0
+                                                }} รายการ
                                             </div>
                                         </ng-template>
                                     </p-table>
@@ -74,19 +84,25 @@
                         </p-tabPanel>
                         <p-tabPanel header="Header II">
                             <ng-template pTemplate="header">
-                                <img src="assets\img\icon\coming-soon.png" height="20" width="20" style="margin-right:10px;">
+                                <img src="assets\img\icon\coming-soon.png" height="20" width="20"
+                                    style="margin-right:10px;">
                                 <span>รายการที่กำลังจะมาถึง</span>
                             </ng-template>
                             <div class="flex m-2">
                                 <div class="card" style="min-width: 900px;">
-                                    <p-table #inputEL2 [value]="allElection" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['elecId','elecName']" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
+                                    <p-table #inputEL2 [value]="allElection" responsiveLayout="scroll"
+                                        selectionMode="single" [globalFilterFields]="['elecId','elecName']"
+                                        [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+                                        currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
                                         <ng-template pTemplate="caption">
                                             <div class="flex align-items-center justify-content-between">
                                                 รายการที่กำลังจะมาถึง
                                                 <span class="p-input-icon-left">
-                                            <i class="pi pi-search"></i>
-                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL2, $event)"/>
-                                        </span>
+                                                    <i class="pi pi-search"></i>
+                                                    <input type="text" pInputText
+                                                        placeholder="กรุณากรอกรหัสหรือชื่อรายการ"
+                                                        (input)="inputSearch(inputEL2, $event)" />
+                                                </span>
                                             </div>
                                         </ng-template>
                                         <ng-template pTemplate="header">
@@ -127,8 +143,11 @@
                                                     </div>
                                                 </td>
                                                 <td class="flex justify-content-center">
-                                                    <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded p-button-warning mr-2" (click)="goToEditVoter(electionDetail.elecId)"></button>
-                                                    <button pButton pRipple type="button" icon="pi pi-trash" class="p-button-rounded p-button-danger"></button>
+                                                    <button pButton pRipple type="button" icon="pi pi-pencil"
+                                                        class="p-button-rounded p-button-warning mr-2"
+                                                        (click)="goToEditVoter(electionDetail.elecId)"></button>
+                                                    <button pButton pRipple type="button" icon="pi pi-trash"
+                                                        class="p-button-rounded p-button-danger"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
@@ -143,19 +162,27 @@
                         </p-tabPanel>
                         <p-tabPanel header="Header III">
                             <ng-template pTemplate="header">
-                                <img src="assets\img\icon\success.png" height="20" width="20" style="margin-right:10px;">
+                                <img src="assets\img\icon\success.png" height="20" width="20"
+                                    style="margin-right:10px;">
                                 <span>รายการที่เสร็จสิ้นแล้ว</span>
                             </ng-template>
                             <div class="flex m-2">
                                 <div class="card" style="min-width: 900px;">
-                                    <p-table #inputEL3 [value]="electionVoteCompleteList" responsiveLayout="scroll" selectionMode="single" [globalFilterFields]="['projCode','projName','customerCode']" dataKey="projectCode" [paginator]="true" [rows]="5" [showCurrentPageReport]="true" currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
+                                    <p-table #inputEL3 [value]="electionVoteCompleteList" responsiveLayout="scroll"
+                                        selectionMode="single"
+                                        [globalFilterFields]="['projCode','projName','customerCode']"
+                                        dataKey="projectCode" [paginator]="true" [rows]="5"
+                                        [showCurrentPageReport]="true"
+                                        currentPageReportTemplate="แสดงข้อมูล {first} ถึง {last} จาก {totalRecords} รายการทั้งหมด">
                                         <ng-template pTemplate="caption">
                                             <div class="flex align-items-center justify-content-between">
                                                 รายการที่เสร็จสิ้นแล้ว
                                                 <span class="p-input-icon-left">
-                                            <i class="pi pi-search"></i>
-                                            <input type="text"  pInputText placeholder="กรุณากรอกรหัสหรือชื่อรายการ" (input)="inputSearch(inputEL3, $event)"/>
-                                        </span>
+                                                    <i class="pi pi-search"></i>
+                                                    <input type="text" pInputText
+                                                        placeholder="กรุณากรอกรหัสหรือชื่อรายการ"
+                                                        (input)="inputSearch(inputEL3, $event)" />
+                                                </span>
                                             </div>
                                         </ng-template>
                                         <ng-template pTemplate="header">
@@ -189,13 +216,16 @@
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <button pButton type="button" class="p-button buttonColor" label="ตรวจสอบ" style="width: 100%;" (click)="goToCompleteElection(electionDetail.elecId)"></button>
+                                                    <button pButton type="button" class="p-button buttonColor"
+                                                        label="ตรวจสอบ" style="width: 100%;"
+                                                        (click)="goToCompleteElection(electionDetail.elecId)"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
                                         <ng-template pTemplate="summary">
                                             <div class="flex align-items-center justify-content-between">
-                                                จำนวนรายการทั้งหมด รายการ
+                                                จำนวนรายการทั้งหมด {{ electionVoteCompleteList ?
+                                                electionVoteCompleteList.lenght : 0}} รายการ
                                             </div>
                                         </ng-template>
                                     </p-table>
@@ -210,6 +240,3 @@
 </div>
 <div style="margin-top:2%;"></div>
 <app-footer></app-footer>
-<div *ngIf="getAddRemoveVoter">
-    <app-addremove-voter (unBlock)="unActivate($event)"></app-addremove-voter>
-</div>
