--- a/src/app/blockchain-evote/footer/footer.component.scss
+++ b/src/app/blockchain-evote/footer/footer.component.scss
@@ -5,7 +5,9 @@ footer {
     background-color: #333;
     color: #fff;
     font-size: 14px;
-    font-family: Arial, sans-serif;
     text-align: center;
     padding: 20px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
