--- a/src/app/blockchain-evote/user/home-page/home-page.component.html
+++ b/src/app/blockchain-evote/user/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [numVisible]="5" [circular]="true"
         [showItemNavigators]="true" [showThumbnails]="false" [autoPlay]="true">
         <ng-template pTemplate="item" let-item>
-            <img [src]="item.previewImageSrc" style="width: 80%;height: 100%; display: block;" />
+            <img [src]="item.previewImageSrc" style="width: 80%;max-height: 450px; display: block;" />
         </ng-template>
         <ng-template pTemplate="thumbnail" let-item>
             <div class="grid grid-nogutter justify-content-center">
@@ -30,18 +30,23 @@
 </div>
 <div class="card">
     <div class="flex flex-wrap card-container align-items-center m-2" style="max-width: 100%">
-        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round" style="min-width: 200px; min-height: 100px" *ngFor="let elec of election;let indexOfelement=index;">
+        <div class="flex align-items-center justify-content-center bg-blue-500 font-bold text-white m-2 ml-2 border-round"
+            style="min-width: 200px; min-height: 100px" *ngFor="let elec of election;let indexOfelement=index;">
             <p-card header="{{elec.election.elecName}}" [style]="{width: '350px'}" styleClass="p-card-shadow">
                 <ng-template pTemplate="header">
                     <div class="flex justify-content-center">
-                        <img alt="Card" src="api/candidate/image/{{elec.election.elecImages}}" [style]="{width: '350px',height: '200px'}" (error)="defaultImage($event)">
+                        <img alt="Card" src="api/candidate/image/{{elec.election.elecImages}}"
+                            [style]="{width: '350px',height: '200px'}" (error)="defaultImage($event)">
+                    </div>
+                    <div class="flex justify-content-left font-bold text-xl m-3">
+                        <p style="width:340px;height:auto;word-wrap: break-word;">
+                            {{elec.election.elecName}}
+                        </p>
                     </div>
                 </ng-template>
-                <div class="fixblock">
-                    <p>
-                        {{elec.election.elecDetail}}
-                    </p>
-                </div>
+                <p style="height: 72px;">
+                    {{elec.election.elecDetail}}
+                </p>
                 <div style="margin-top: 1rem">
                     <b>
                         <p>
@@ -50,14 +55,12 @@
                         <p>
                             สิ้นสุด : {{elec.election.elecEnddate | formatDate}}
                         </p>
-                        <p>
-                            ผู้ลงสมัครทั้งหมด : {{elec.election.countCandi}} คน
-                        </p>
                     </b>
                 </div>
 
                 <ng-template pTemplate="footer">
-                    <button pButton type="button" class="p-button buttonColor" label="ลงคะแนน" [style]="{width: '100%'}" (click)="goToElectionById(elec.election.elecId)"></button>
+                    <button pButton type="button" class="p-button buttonColor" label="ลงคะแนน" [style]="{width: '100%'}"
+                        (click)="goToElectionById(elec.election.elecId)"></button>
                 </ng-template>
             </p-card>
         </div>
