--- a/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
+++ b/src/app/blockchain-evote/admin/managevoter-admin/managevoter-admin.component.html
@@ -143,11 +143,9 @@
                                                     </div>
                                                 </td>
                                                 <td class="flex justify-content-center">
-                                                    <button pButton pRipple type="button" icon="pi pi-pencil"
-                                                        class="p-button-rounded p-button-warning mr-2"
+                                                    <button pButton pRipple type="button" label="จัดการผู้มีสิทธื์"
+                                                        class="p-button p-button-warning mr-2"
                                                         (click)="goToEditVoter(electionDetail.elecId)"></button>
-                                                    <button pButton pRipple type="button" icon="pi pi-trash"
-                                                        class="p-button-rounded p-button-danger"></button>
                                                 </td>
                                             </tr>
                                         </ng-template>
