--- a/src/app/blockchain-evote/admin/manage-student/add-user-manual/add-user-manual.component.html
+++ b/src/app/blockchain-evote/admin/manage-student/add-user-manual/add-user-manual.component.html
@@ -60,7 +60,7 @@
                             style="min-width: 200px; min-height: 100px">
                             <div class="field">
                                 <label for="birthday" class="block">วันเดือนปีเกิด</label>
-                                <p-calendar inputId="birthday" formControlName="birthday"></p-calendar>
+                                <p-calendar inputId="birthday" formControlName="birthday" appendTo="body"></p-calendar>
                             </div>
                         </div>
                         <div class="flex align-items-center justify-content-center m-2 mt-0 border-round"
